[gd_scene load_steps=2 format=3 uid="uid://c1ebsuv0gdqsi"]

[ext_resource type="Script" uid="uid://dxamyufmtcasj" path="res://ui/map_ui/item_label/item_label.gd" id="1_6huud"]

[node name="ItemLabel" type="BoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6huud")

[node name="EquipStatus" type="Label" parent="."]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.254902, 0.411765, 0.882353, 1)

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
stretch_mode = 3

[node name="Name" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 2

[node name="CurrentUses" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"BlueLabel"

[node name="Separator" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"YellowLabel"
text = "/"

[node name="MaxUses" type="Label" parent="."]
custom_minimum_size = Vector2(11, 0)
layout_mode = 2
theme_type_variation = &"BlueLabel"
text = "1"
horizontal_alignment = 2
